Fixed text not showing up on iphone

--- a/rankthethings.css
+++ b/rankthethings.css
@@ -32,6 +32,7 @@ table
 button
 {
 	cursor: pointer;
+	-webkit-appearance: none
 }
 
 button.entry
